avro_derive/tests/ui/avro_rs_226_skip_serializing.stderr
error: `#[serde(skip_serializing)]` and `#[serde(skip_serializing_if)]` require `#[avro(default = "..")]`
 --> tests/ui/avro_rs_226_skip_serializing.rs:7:5
  |
7 | /     #[serde(skip_serializing)]
8 | |     z: Option<i8>,
  | |_________________^
